Fix page spacing

--- a/src/js/components/App.scss
+++ b/src/js/components/App.scss
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     line-height: 1.4;
-    margin: 0;
+    margin: 0 0 1.5em;
     padding: 0;
     width: 100%;
     font-family: 'Josefin Slab', serif;
